--- a/demo/miniprogram/components/iot-p2p-common-player/player.wxss
+++ b/demo/miniprogram/components/iot-p2p-common-player/player.wxss
@@ -17,3 +17,9 @@
   width: 100%  !important;
   height: 100%  !important;
 }
+.text-box {
+  padding: 10rpx;
+}
+.text-break {
+  word-break: break-all;
+}
