--- a/demo/miniprogram/components/iot-p2p-player-ipc/player.wxml
+++ b/demo/miniprogram/components/iot-p2p-player-ipc/player.wxml
@@ -5,6 +5,7 @@
       mode="ipc"
       targetId="{{targetId}}"
       flvUrl="{{flvUrl}}"
+      autoReplay="{{type === 'live'}}"
       productId="{{productId}}"
       deviceName="{{deviceName}}"
       xp2pInfo="{{xp2pInfo}}"
@@ -16,7 +17,7 @@
       bind:systemPermissionDenied="passEvent"
     />
   </view>
-  <view class="component-section">
+  <view class="component-section" wx:if="{{type === 'live'}}">
     <view class="ptz-panel-wrap">
       <view class="ptz-panel">
         <view class="ptz-controls">
@@ -43,7 +44,7 @@
       </view>
     </view>
   </view>
-  <view class="component-section">
+  <view class="component-section" wx:if="{{type === 'live'}}">
     <view class="component-section-title">切换清晰度</view>
     <view class="group-button-area">
       <button bindtap="changeFlv" data-flv="ipc.flv?action=live&channel=0&quality=super" class="group-button" type="primary" size="mini" disabled="{{!p2pReady}}">
@@ -57,7 +58,7 @@
       </button>
     </view>
   </view>
-  <view class="component-section">
+  <view class="component-section" wx:if="{{type === 'live'}}">
     <view class="component-section-title">语音对讲</view>
     <view>voiceState: {{voiceState}}</view>
     <view class="group-button-area">
@@ -72,16 +73,8 @@
       </button>
     </view>
   </view>
-  <view class="component-section">
-    <view class="component-section-title">内置信令</view>
-    <view class="group-button-area">
-      <button bindtap="sendInnerCommand" data-cmd-name="getLiveStatus" class="group-button" type="primary" size="mini" disabled="{{!p2pReady}}">
-        获取拉流状态
-      </button>
-      <button bindtap="sendInnerCommand" data-cmd-name="getVoiceStatus" class="group-button" type="primary" size="mini" disabled="{{!p2pReady}}">
-        获取对讲状态
-      </button>
-    </view>
+  <view class="component-section" wx:if="{{type === 'playback'}}">
+    <view class="component-section-title">查询录像</view>
     <view>
       <view>date:</view>
       <view class="weui-cells weui-cells_after-title">
@@ -95,12 +88,52 @@
       </view>
     </view>
     <view class="group-button-area">
-      <button bindtap="sendInnerCommandWithDate" data-cmd-name="getRecordDates" class="group-button" type="primary" size="mini" disabled="{{!p2pReady}}">
+      <button bindtap="getRecordDates" data-cmd-name="getRecordDates" class="group-button" type="primary" size="mini" disabled="{{!p2pReady}}">
         获取该月录像日期
       </button>
-      <button bindtap="sendInnerCommandWithDate" data-cmd-name="getRecordVideos" class="group-button" type="primary" size="mini" disabled="{{!p2pReady}}">
+      <button bindtap="getRecordVideos" data-cmd-name="getRecordVideos" class="group-button" type="primary" size="mini" disabled="{{!p2pReady}}">
         获取该日录像列表
       </button>
+    </view>
+  </view>
+  <view class="component-section" wx:if="{{type === 'playback'}}">
+    <view class="component-section-title">播放录像</view>
+    <view class="weui-cells weui-cells_after-title">
+      <view class="weui-cell weui-cell_input">
+        <input class="weui-input" type="text" value="{{inputPlaybackTime}}" placeholder="请输入录像时段" placeholder-class="placeholder" bindinput="inputIPCPlaybackTime" />
+      </view>
+    </view>
+    <view class="group-button-area">
+      <button bindtap="startPlayback" class="group-button" type="primary" size="mini" disabled="{{!p2pReady || !inputPlaybackTime}}">
+        播放
+      </button>
+      <button bindtap="stopPlayback" class="group-button" type="primary" size="mini" disabled="{{!p2pReady || !playerPlaybackTime}}">
+        停止
+      </button>
+    </view>
+  </view>
+  <view class="component-section">
+    <view class="component-section-title">内置信令</view>
+    <view class="group-button-area" wx:if="{{type === 'live'}}">
+      <button bindtap="sendInnerCommand" data-cmd-name="getLiveStatus" class="group-button" type="primary" size="mini" disabled="{{!p2pReady}}">
+        获取直播拉流状态
+      </button>
+      <button bindtap="sendInnerCommand" data-cmd-name="getVoiceStatus" class="group-button" type="primary" size="mini" disabled="{{!p2pReady}}">
+        获取对讲状态
+      </button>
+    </view>
+    <view class="group-button-area" wx:if="{{type === 'playback'}}">
+      <button bindtap="sendInnerCommand" data-cmd-name="getPlaybackStatus" class="group-button" type="primary" size="mini" disabled="{{!p2pReady}}">
+        获取回放拉流状态
+      </button>
+      <!-- 设备端暂未实现
+      <button bindtap="sendInnerCommand" data-cmd-name="pausePlayback" class="group-button" type="primary" size="mini" disabled="{{!p2pReady}}">
+        暂停回放
+      </button>
+      <button bindtap="sendInnerCommand" data-cmd-name="resumePlayback" class="group-button" type="primary" size="mini" disabled="{{!p2pReady}}">
+        继续回放
+      </button>
+      -->
     </view>
   </view>
   <view class="component-section">
