feat(demo): 优化demo

--- a/demo/miniprogram/components/iot-p2p-common-player/player.wxml
+++ b/demo/miniprogram/components/iot-p2p-common-player/player.wxml
@@ -17,27 +17,36 @@
         bind:netstatus="onLivePlayerNetStatusChange"
       />
       <view class="player-message">{{playerMsg}}</view>
+      <view class="debug-info-switch-container">
+        <view class="debug-info-switch" bindtap="toggleDebugInfo">打开/关闭调试信息</view>
+      </view>
     </view>
   </view>
   <view wx:else class="component-section">
-    <view>playerMsg: {{playerMsg}}</view>
-  </view>
-  <view wx:if="{{showDebugInfo}}" class="component-section">
-    <view>
-      <view>flvFile: </view>
-      <view class="text-box">
-        <text class="text-break">{{flvFile}}</text>
-      </view>
+    <view class="empty-player-container">
+      <view>totalBytes: {{totalBytes}}</view>
+      <view>playerMsg: {{playerMsg}}</view>
+      <view bindtap="toggleDebugInfo">打开/关闭调试信息</view>
     </view>
-    <view>playerState: {{playerState}}</view>
-    <view>p2pState: {{p2pState}}</view>
-    <view>streamState: {{streamState}}</view>
-    <view>totalBytes: {{totalBytes}}</view>
-    <view>firstChunkTime: {{firstChunkTime}}</view>
-    <view>
-      <view>livePlayerInfo: </view>
-      <view class="text-box" style="height: 120rpx;">
-        <text class="text-break">{{livePlayerInfo}}</text>
+  </view>
+  <view wx:if="{{showDebugInfo}}" class="debug-info-container">
+    <view class="debug-info">
+      <view>
+        <view>flvFile: </view>
+        <view class="text-box two-lines">
+          <text class="text-break">{{flvFile}}</text>
+        </view>
+      </view>
+      <view>playerState: {{playerState}}</view>
+      <view>p2pState: {{p2pState}}</view>
+      <view>streamState: {{streamState}}</view>
+      <view>totalBytes: {{totalBytes}}</view>
+      <view>firstChunkTime: {{firstChunkTime}}</view>
+      <view>
+        <view>livePlayerInfo: </view>
+        <view class="text-box" style="height: 180rpx;">
+          <text class="text-break">{{livePlayerInfo}}</text>
+        </view>
       </view>
     </view>
   </view>
