--- a/demo/miniprogram/components/iot-p2p-common-player/player.wxss
+++ b/demo/miniprogram/components/iot-p2p-common-player/player.wxss
@@ -4,6 +4,10 @@
   height: 420rpx;
   background-color: black;
 }
+.player-container live-player {
+  width: 100%  !important;
+  height: 100%  !important;
+}
 .player-container .player-message {
   position: absolute;
   left: 0;
@@ -13,12 +17,39 @@
   text-align: center;
   color: white;
 }
-.player-container live-player {
-  width: 100%  !important;
-  height: 100%  !important;
+.player-container .debug-info-switch-container {
+  position: absolute;
+  left: 20rpx;
+  bottom: 20rpx;
+}
+.player-container .debug-info-switch-container .debug-info-switch {
+  position: inline-block;
+  vertical-align: bottom;
+  color: white;
+  /* opacity: 0; */
+  margin-right: 20rpx;
+}
+
+.empty-player-container {
+  padding: 20rpx;
+}
+
+.debug-info-container {
+  position: absolute;
+  width: 100%;
+  /* max-height: 720px; */
+  /* overflow: auto; */
+  background-color: #fff;
+  box-shadow: inset 0 -2px 0 0 rgba(0, 0, 0, 0.1);
+  z-index: 100;
 }
 .text-box {
+  box-sizing: border-box;
   padding: 10rpx;
+  min-height: 60rpx;
+}
+.text-box.two-lines {
+  min-height: 120rpx;
 }
 .text-break {
   word-break: break-all;
