feat(demo): 1.0.2发布，更新demo

--- a/demo/miniprogram/components/iot-p2p-player-ipc/player.wxml
+++ b/demo/miniprogram/components/iot-p2p-player-ipc/player.wxml
@@ -149,19 +149,17 @@
         <input class="weui-input" type="text" value="{{inputCommand}}" placeholder="请输入command" placeholder-class="placeholder" bindinput="inputIPCCommand" />
       </view>
     </view>
-    <!-- 1.0.2 暂未发布
+    <view>responseType:</view>
     <view>
-      responseType:
-      <radio-group bindchange="commandResponseTypeChanged">
-        <label class="radio">
+      <radio-group bindchange="commandResponseTypeChanged" style="display: flex;">
+        <label class="weui-cell weui-check__label">
           <radio value="text" checked="{{inputCommandResponseType === 'text'}}"/>text
         </label>
-        <label class="radio">
+        <label class="weui-cell weui-check__label">
           <radio value="arraybuffer" checked="{{inputCommandResponseType === 'arraybuffer'}}" />arraybuffer
         </label>
       </radio-group>
     </view>
-    -->
     <view class="group-button-area">
       <button bindtap="sendCommand" class="group-button" type="primary" size="mini" disabled="{{!p2pReady}}">
         sendCommand
