--- a/demo/miniprogram/components/iot-p2p-common-player/player.wxml
+++ b/demo/miniprogram/components/iot-p2p-common-player/player.wxml
@@ -24,6 +24,7 @@
   </view>
   <view wx:else class="component-section">
     <view class="empty-player-container">
+      <view>chunkCount: {{chunkCount}}</view>
       <view>totalBytes: {{totalBytes}}</view>
       <view>playerMsg: {{playerMsg}}</view>
       <view bindtap="toggleDebugInfo">打开/关闭调试信息</view>
@@ -40,6 +41,7 @@
       <view>playerState: {{playerState}}</view>
       <view>p2pState: {{p2pState}}</view>
       <view>streamState: {{streamState}}</view>
+      <view>chunkCount: {{chunkCount}}</view>
       <view>totalBytes: {{totalBytes}}</view>
       <view>firstChunkTime: {{firstChunkTime}}</view>
       <view>
