--- a/demo/miniprogram/components/iot-p2p-player-debug/player.wxss
+++ b/demo/miniprogram/components/iot-p2p-player-debug/player.wxss
@@ -31,6 +31,12 @@
   height: 100%  !important;
 }
 
+.empty-player-container {
+  background-color: black;
+  color: white;
+  padding: 20rpx;
+}
+
 .control-info {
   position: relative;
 }
