--- a/demo/miniprogram/pages/xp2p-demo-1vN/demo.wxml
+++ b/demo/miniprogram/pages/xp2p-demo-1vN/demo.wxml
@@ -14,6 +14,7 @@
         productId="{{productId}}" 
         deviceName="{{deviceName}}" 
         xp2pInfo="{{xp2pInfo}}" 
+        needCheckStream="{{needCheckStream}}"
         onlyp2p="{{onlyp2p}}"
         bind:playError="onPlayError"
         bind:systemPermissionDenied="onPlayerSystemPermissionDenied"
