--- a/demo/miniprogram/components/iot-p2p-common-player/player.wxss
+++ b/demo/miniprogram/components/iot-p2p-common-player/player.wxss
@@ -30,20 +30,23 @@
   margin-right: 20rpx;
 }
 
-.empty-player-container {
-  background-color: black;
+.player-container .mock-player {
   color: white;
+  width: 100%;
+  height: 100%;
   padding: 20rpx;
 }
 
 .debug-info-container {
   position: absolute;
   width: 100%;
-  /* max-height: 720px; */
-  /* overflow: auto; */
+  max-height: 720rpx;
+  overflow: auto;
   background-color: #fff;
-  box-shadow: inset 0 -2px 0 0 rgba(0, 0, 0, 0.1);
+  box-sizing: border-box;
+  box-shadow: inset 0 -2rpx 0 0 rgba(0, 0, 0, 0.1);
   z-index: 100;
+  padding: 20rpx;
 }
 .text-box {
   box-sizing: border-box;
