--- a/demo/miniprogram/components/iot-p2p-player-ipc/player.wxss
+++ b/demo/miniprogram/components/iot-p2p-player-ipc/player.wxss
@@ -1,23 +1,6 @@
+@import '../../common.wxss';
 @import '../../input.wxss';
 @import './ptz-panel.wxss';
-
-.component-section {
-  margin-bottom: 20rpx;
-}
-.component-section-gap {
-  margin-bottom: 40rpx;
-}
-.component-section-title {
-  padding-bottom: 10rpx;
-  font-size: 18px;
-}
-
-.group-button-area {
-  padding-top: 10rpx;
-}
-.group-button {
-  margin-right: 10rpx;
-}
 
 .ptz-panel-wrap {
   position: relative;
