--- a/demo/miniprogram/components/iot-p2p-common-player/player.wxss
+++ b/demo/miniprogram/components/iot-p2p-common-player/player.wxss
@@ -11,11 +11,24 @@
 .player-container .player-message {
   position: absolute;
   left: 0;
-  top: 0;
+  top: 50%;
   width: 100%;
-  padding-top: 200rpx;
   text-align: center;
   color: white;
+}
+.player-container .player-controls-container {
+  position: absolute;
+  right: 20rpx;
+  bottom: 20rpx;
+}
+.player-container .player-controls-container .player-controls {
+  display: flex;
+}
+.player-container .player-controls-container .player-controls .player-control-item {
+  position: inline-block;
+  vertical-align: bottom;
+  color: white;
+  margin-left: 20rpx;
 }
 .player-container .debug-info-switch-container {
   position: absolute;
@@ -50,12 +63,26 @@
 }
 .text-box {
   box-sizing: border-box;
-  padding: 10rpx;
-  min-height: 60rpx;
+  padding: 0 10rpx;
+  min-height: 54rpx; /* 44 + 10 */
 }
-.text-box.two-lines {
-  min-height: 120rpx;
+.text-box.lines-2 {
+  min-height: 98rpx; /* 44 * 2 + 10 */
+}
+.text-box.lines-3 {
+  min-height: 142rpx; /* 44 * 3 + 10 */
 }
 .text-break {
   word-break: break-all;
+}
+.text-btn {
+  color: #0052d9;
+}
+.text-btn.right {
+  position: absolute;
+  right: 20rpx;
+}
+.text-btn.float-right {
+  float: right;
+  margin-right: 20rpx;
 }
