--- a/demo/miniprogram/pages/xp2p-demo-1vN/demo.wxss
+++ b/demo/miniprogram/pages/xp2p-demo-1vN/demo.wxss
@@ -1,3 +1,10 @@
 page {
   background-color: #f5f5f5;
 }
+
+.top-right-btn {
+  position: absolute;
+  top: 20rpx;
+  right: 20rpx;
+  color: #fff;
+}
